{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 122,
  "lineage": "e9a052e5-3bd2-4bf5-f348-7dffe2272f9c",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_global_address",
      "name": "cdn_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.54.111.7",
            "address_type": "EXTERNAL",
            "id": "projects/notetakingapp-001/global/addresses/frontend-cdn-ip",
            "name": "frontend-cdn-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "notetakingapp-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/addresses/frontend-cdn-ip",
            "status": "IN_USE"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-22T11:55:46.412-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/notetakingapp-001/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/networks/my-vpc",
            "priority": 1000,
            "project": "notetakingapp-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-22T11:55:46.249-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/notetakingapp-001/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/networks/my-vpc",
            "priority": 1000,
            "project": "notetakingapp-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.10.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-03-23T15:06:13.525-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/notetakingapp-001/global/addresses/cloudsql-ip-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "cloudsql-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/networks/my-vpc",
            "prefix_length": 24,
            "project": "notetakingapp-001",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/addresses/cloudsql-ip-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "cdn_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 412237191882140014,
            "id": "projects/notetakingapp-001/global/forwardingRules/cdn-https-forwarding-rule",
            "ip_address": "34.54.111.7",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "cdn-https-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "notetakingapp-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/forwardingRules/cdn-https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/targetHttpsProxies/cdn-https-proxy"
          },
          "dependencies": [
            "data.google_compute_global_address.cdn_ip",
            "google_compute_backend_bucket.cdn_backend",
            "google_compute_managed_ssl_certificate.cdn_cert",
            "google_compute_target_https_proxy.cdn_https_proxy",
            "google_compute_url_map.cdn_url_map",
            "google_storage_bucket.cdn_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/notetakingapp-001/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5528221438230837620",
            "numeric_id": "5528221438230837620",
            "project": "notetakingapp-001",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "cloud_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-22T11:55:46.584-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/notetakingapp-001/regions/asia-east2/routers/cloud-router",
            "name": "cloud-router",
            "network": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/networks/my-vpc",
            "project": "notetakingapp-001",
            "region": "asia-east2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/regions/asia-east2/routers/cloud-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "notetakingapp-001/asia-east2/cloud-router/cloud-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cloud-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "notetakingapp-001",
            "region": "asia-east2",
            "router": "cloud-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.cloud_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-22T18:18:46.735-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.2.1",
            "id": "projects/notetakingapp-001/regions/asia-east2/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/networks/my-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "notetakingapp-001",
            "purpose": "PRIVATE",
            "region": "asia-east2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.96.0/20",
                "range_name": "gke-pods-range"
              },
              {
                "ip_cidr_range": "10.0.120.0/24",
                "range_name": "gke-services-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/regions/asia-east2/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8455073360751288217
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-22T11:55:46.965-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/notetakingapp-001/regions/asia-east2/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/networks/my-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "notetakingapp-001",
            "purpose": "PRIVATE",
            "region": "asia-east2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/regions/asia-east2/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1058234624350796125
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "cdn_https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-12T23:15:27.929-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/notetakingapp-001/global/targetHttpsProxies/cdn-https-proxy",
            "name": "cdn-https-proxy",
            "project": "notetakingapp-001",
            "proxy_bind": false,
            "proxy_id": 4153266260611098768,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/targetHttpsProxies/cdn-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/sslCertificates/cdn-ssl-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/urlMaps/cdn-url-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.cdn_backend",
            "google_compute_managed_ssl_certificate.cdn_cert",
            "google_compute_url_map.cdn_url_map",
            "google_storage_bucket.cdn_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "cdn_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-12T23:15:16.362-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/backendBuckets/cdn-backend-bucket",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Jw0Stvm58Bs=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "cdn.notes.carichung.com"
                ],
                "path_matcher": "cdn-path-matcher"
              }
            ],
            "id": "projects/notetakingapp-001/global/urlMaps/cdn-url-map",
            "map_id": 1945850067732064411,
            "name": "cdn-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/backendBuckets/cdn-backend-bucket",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "cdn-path-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/backendBuckets/cdn-backend-bucket",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "notetakingapp-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/notetakingapp-001/global/urlMaps/cdn-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.cdn_backend",
            "google_storage_bucket.cdn_bucket"
          ]
        }
      ]
    }
  ]
}